# spin-demo

./: flake.nix  readme.md  toolchain.toml
k8s/: deployment-spin-demo.yaml
spin-demo/: Cargo.toml  spin.toml
spin-demo/src/: lib.rs
