[package]
name = "spin-demo"
authors = ["benjamin.bajorat <benjamin.bajorat@mayflower.de>"]
description = ""
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
http = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4"

[workspace]